--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"http-proxy": "0.7.6",
 	"less": "1.1.6",
 	"express": "2.5.2",
-    "now": "0.8.0"
+    "now": ">=0.8.0"
   },
   "devDependencies": {}
 }
